[package]
name = "vsphere-api"
version = "0.0.1"
authors = ["Angelo Steinbach <asteinba@outlook.de>"]
edition = "2018"
license = "MIT"
description = "A library for the vSphere REST API. Currently only the login works but more features follow very soon!"

[dependencies]
derive_more = "0.99"
reqwest = { version = "0.10", default-features = false, features = ["json", "rustls-tls"] }
tokio = { version = "0.2", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
chrono = { version = "0.4", features = ["serde"] }